[package]
name = "game_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4.17"
# clap = { version = "4.2.1", features = ["derive"] }
async-trait = "0.1.68"
futures = { version = "0.3.28", features = ["executor", "thread-pool"] }
async-std = "1.12.0"
egui = "0.21.0"
eframe = {version = "0.21.0"}